# mcp-server-amq

./: README.md  pyproject.toml
src/mcp_server_amq/: __init__.py  __main__.py  handlers.py  models.py  resources.py  server.py
src/mcp_server_amq/doc/: rabbitmq_best_practices.txt  rabbitmq_sizing_guide.txt
