[project]
name = "mcp-server-amq"
version = "0.1.0"
description = "A Model Context Protocol server for AmazonMQ to provision and manage your AMQ brokers"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ken Liao" }]
maintainers = [{ name = "Ken Liao", email = "kenliao94@gmail.com" }]
keywords = ["amq", "aws", "mcp", "llm", "automation"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "markdownify>=0.13.1",
    "mcp>=1.1.2",
    "pika>=1.3.2",
    "protego>=0.3.1",
    "pydantic>=2.0.0",
    "readabilipy>=0.2.0",
    "requests>=2.32.3",
    "boto3>=1.37.23",
]

[project.scripts]
mcp-server-amq= "mcp_server_amq:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
